<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="br.com.halph.helloworld.MainActivity">

    <EditText
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/textNome"
        android:hint="Digite seu nome" />

    <EditText
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="5dp"
        android:id="@+id/textResultado"
        android:hint="Resultado" />

    <Button
        android:text="Concatena texto"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/buttonClick"
        android:layout_gravity="end"
        android:layout_centerHorizontal="true" />


    <LinearLayout
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:text="Check 1"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_height="wrap_content"
            android:id="@+id/checkBoxUm" />

        <CheckBox
            android:text="Check 2"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            android:id="@+id/checkBoxDois" />

        <CheckBox
            android:text="Check 3"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_height="wrap_content"
            android:id="@+id/checkBoxTres" />

    </LinearLayout>



        <RadioGroup
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:text="Radio Test Um"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:id="@+id/radioValorUm" />


            <RadioButton
                android:text="Radio test dois"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioValorDois" />
        </RadioGroup>


    <LinearLayout
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_alignParentLeft="true"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:layout_marginTop="5dp"
            android:id="@+id/textValorUm"
            android:hint="V1" />

        <EditText
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_centerInParent="true"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:layout_marginTop="5dp"
            android:id="@+id/textValorDois"
            android:hint="V2" />

        <EditText
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_alignParentRight="true"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_marginTop="5dp"
            android:id="@+id/textResultadoValor"
            android:hint="result" />
    </LinearLayout>

    <Button
        android:text="Soma"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/buttonCalcula"
        android:layout_gravity="end"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="Próxima Tela"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/btnProximaTela"
        android:layout_gravity="end"
        android:layout_centerHorizontal="true" />

</LinearLayout>
